# timeglass

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  ROADMAP.md  build.py  pyproject.toml  requirements-dev.txt  setup.py  test_fastapi_integration.py  test_rust_integration.py
src/: lib.rs
tests/: __init__.py  test_integration.py  test_middleware.py  test_models.py  test_rust_extension.py  test_storage.py  test_web.py
timeglass/: __init__.py  cli.py  middleware.py  models.py  storage.py  web.py
timeglass/static/css/: style.css
timeglass/static/js/: app.js  dashboard.js
timeglass/templates/: base.html  dashboard.html  request_detail.html
