[package]
name = "timeglass"
version = "0.1.0"
edition = "2021"
description = "Rust profiling engine for TimeGlass"
license = "MIT"

[lib]
name = "timeglass"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["pyo3/extension-module"]
