[tool.poetry]
name = "timeglass"
version = "0.1.0"
description = "A lightweight profiling tool for FastAPI applications"
authors = ["TimeGlass Team <team@timeglass.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "timeglass"}]

[tool.poetry.scripts]
timeglass = "timeglass.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
setuptools-rust = "^1.8.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "setuptools-rust"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
